--- a/standup_notes/resources/standup.template
+++ b/standup_notes/resources/standup.template
@@ -1,6 +1,11 @@
-__What I did yesterday__:
+## What I did yesterday:
 
-__What I'm doing today__:
+-
 
-__Blockers__:
-- none
+## What I'm going to do today:
+
+-
+
+## What stops me from finishing my work:
+
+-
