Use the new template everywhere

--- a/standup_notes/resources/standup.template
+++ b/standup_notes/resources/standup.template
@@ -1,11 +1,11 @@
-## What I did yesterday:
+## What I did yesterday
 
 -
 
-## What I'm going to do today:
+## What I'm going to do today
 
 -
 
-## What stops me from finishing my work:
+## What stops me from finishing my work
 
 -
